Salesforce/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bat_W__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Bat W</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BillingLocation__c</fullName>
        <label>BillingLocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <label>Business Hours</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <formula>DISTANCE(   BillingAddress   ,   BillingLocation__c  , &apos;km&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DISTANCE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENCRYPTVINAY__c</fullName>
        <label>ENCRYPTVINAY</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>HISTORY_FIELD__c</fullName>
        <label>HISTORY FIELD</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MyCheckPL__c</fullName>
        <label>MyCheckPL</label>
        <picklist>
            <picklistValues>
                <fullName>GOOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NO_OF_CHILDRECORDS__c</fullName>
        <label>NO OF CHILDRECORDS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORG_WEB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORG WEB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STANDARDLOCATION__c</fullName>
        <label>STANDARDLOCATION</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>TEST_GLOBAL_PL__c</fullName>
        <globalPicklist>MY_GLOBAL_PL</globalPicklist>
        <label>TEST GLOBAL PL</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestCureency__c</fullName>
        <label>TestCureency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bw__c</fullName>
        <label>bw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>child_records__c</fullName>
        <label>child records</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>myfield__c</fullName>
        <label>myfield</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>SOCIAL_PERSONA_TWITTER</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>best_one</fullName>
        <active>true</active>
        <description>create record type</description>
        <label>best one</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>EMPLOYEE_RULE2</fullName>
        <active>false</active>
        <errorConditionFormula>(NumberOfEmployees =0)||( ISNULL( NumberOfEmployees ) )</errorConditionFormula>
        <errorDisplayField>NumberOfEmployees</errorDisplayField>
        <errorMessage>PLEASE ENTER VALID NO&gt;OF EMPLOYEES</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NAMEVALIODATION</fullName>
        <active>false</active>
        <errorConditionFormula>If(ISNEW(),false,IF(Text(PRIORVALUE(Rating))= &apos;HOT&apos; ,    true,false))</errorConditionFormula>
        <errorMessage>You can not change this record  because Rating = Hot</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>POSTAL_CODE</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(BillingPostalCode,&quot;[0-9]{6}&quot;))</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>PROVIDE POSTAL CODE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REVENUE</fullName>
        <active>false</active>
        <errorConditionFormula>AnnualRevenue=0</errorConditionFormula>
        <errorDisplayField>AnnualRevenue</errorDisplayField>
        <errorMessage>PLEASE PROVIDE VALID REVENUE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VALIRULE4</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(AccountNumber)=11</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>PLEASE PROVIDE 11 DIGIT NUMBER</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VALR3</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
AND( 
OR(BillingCountry=&quot;CANADA&quot;,BillingCountry=&quot;canada&quot;),
LEN(BillingPostalCode)=6 ,NOT(BillingPostalCode=&quot;000000&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>PLEASE ENTER VALID POSTAL CODE</errorMessage>
    </validationRules>
</CustomObject>